# api/shizen/controllers/default_controller.py
@@ -1,6 +1,6 @@
 import connexion
-import six
 import mariadb
+import six
 
 from shizen.models.plant import Plant  # noqa: E501
 from shizen import util
@@ -29,26 +29,41 @@ def get_all_plants():  # noqa: E501
     return plant_list
 
 
-def get_plant(id):  # noqa: E501
+def get_plant(idx):  # noqa: E501
     """get_plant
 
     Returns info about a specific plant. # noqa: E501
 
-    :param id: The plant ID
-    :type id: int
+    :param idx: The plant ID
+    :type idx: int
 
-    :rtype: List[Plant]
+    :rtype: Plant
     """
-
     connection = mariadb.connect(user="root", host="localhost", database="shizen", password="")
     cursor = connection.cursor()
-    cursor.execute("SELECT * FROM plants WHERE id=" + id)
+    cursor.execute("SELECT * FROM plants WHERE id=%s", (idx,))
 
     plant = None
     for id_plant, common_name, scientific_name, label_name, description, image_url in cursor:
         plant = Plant(id_plant, common_name, scientific_name, label_name, description, image_url)
+        break
 
     cursor.close()
     connection.close()
 
     return plant
+
+
+def recognize(body=None):  # noqa: E501
+    """recognize
+
+    Recognizes which plant is in a specific image. # noqa: E501
+
+    :param body: 
+    :type body: dict | bytes
+
+    :rtype: Plant
+    """
+    if connexion.request.is_json:
+        body = Object.from_dict(connexion.request.get_json())  # noqa: E501
+    return body
